--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node_modules"
   ],
   "dependencies": {
+    "@agm/core": "^1.1.0",
     "@angular/common": "8.2.4",
     "@angular/compiler": "8.2.4",
     "@angular/core": "8.2.4",
