--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "bootstrap": "4.3.1",
     "bootswatch": "4.3.1",
     "core-js": "3.2.1",
+    "html2canvas": "^1.0.0-rc.5",
+    "jspdf": "^1.5.3",
     "moment": "2.24.0",
     "ng-jhipster": "0.11.4",
     "ngx-cookie": "4.0.2",
